--- a/resources/styles.css
+++ b/resources/styles.css
@@ -26,7 +26,7 @@ body {
     align-items: center;
 }
 
-.title h1 {
+h1 {
     font-size: 50px;
     font-family: 'EB Garamond', serif;
     margin: 0;
@@ -59,8 +59,15 @@ body {
     justify-content: space-around;
     align-items: center;
 }
+
+.contacto-container-1 {
+    width: 50%;
+    text-align: center;
+}
+
 .contacto-container-2 {
     width: 50%;
+    text-align: center;
 }
 
 .contacto p {
@@ -70,7 +77,7 @@ body {
 /* Arroces */
 
 .arroces {
-    height: 800px;
+   
     display: grid;
     grid-template: 1fr repeat(2, 3fr) / repeat(6, 1fr);
     justify-items: center;
@@ -101,3 +108,74 @@ h3 {
     text-align: center;
 }
 
+@media(max-width: 1800px) {
+
+.hero img {
+    grid-area: 1 / 3 / span 4 / span 2;
+}
+
+.title {
+    grid-area: 5 / 2 / span 3 / span 4;
+}
+
+.arroces {
+    grid-template: 1fr repeat(2, 3fr) / repeat(4, 1fr);
+}
+
+.arroz-img {
+    display: flex;
+    justify-content: right;
+    width: 50%;
+}
+
+}
+
+@media (max-width: 1350px) {
+
+.contacto-container-1 {
+    width: 30%;
+}
+
+.contacto-container-2 {
+    width: 70%;
+}
+
+.arroz-img img {
+    width: 150px;
+    height: auto;
+}
+
+h1 {
+    font-size: 25px;
+}
+
+p{
+    font-size: 12px;
+}
+
+h3 {
+    font-size: 15px;
+}
+
+}
+
+@media (max-width: 650px) {
+
+.arroces {
+    grid-template: 1fr repeat(2, 3fr) / repeat(1, 1fr);
+}
+
+.contacto {
+    grid-template: 1fr  1fr/ 1fr;
+    grid-row-gap: 10px;
+}
+
+h1 {
+    font-size: 15px;
+}
+
+h2 {
+    font-size: 15px;
+}
+
+}
