--- a/resources/styles.css
+++ b/resources/styles.css
@@ -108,7 +108,7 @@ h3 {
     text-align: center;
 }
 
-@media(max-width: 1800px) {
+@media only screen and (max-width: 1800px) {
 
 .hero img {
     grid-area: 1 / 3 / span 4 / span 2;
@@ -130,7 +130,7 @@ h3 {
 
 }
 
-@media (max-width: 1350px) {
+@media only screen and (max-width: 1350px) {
 
 .contacto-container-1 {
     width: 30%;
@@ -159,7 +159,7 @@ h3 {
 
 }
 
-@media (max-width: 650px) {
+@media only screen and (max-width: 650px) {
 
 .arroces {
     grid-template: 1fr repeat(2, 3fr) / repeat(1, 1fr);
