--- a/resources/styles.css
+++ b/resources/styles.css
@@ -100,16 +100,16 @@ h1 {
     border: 2px solid gray ;
 }
 
-.arroz-description {
-    width: 50%;
-}
-
 h3 {
     text-align: center;
 }
 
+.arroz-description {
+    width: 50%;
+}
+
 .arroz-img {
-    width: 50%
+    width: 50%;
 }
 
 .arroz-img img {
@@ -155,6 +155,14 @@ p{
 
 h3 {
     font-size: 15px;
+}
+
+.arroz-description {
+    width: 70%;
+}
+
+.arroz-img {
+    width: 30%;
 }
 
 }
