--- a/resources/styles.css
+++ b/resources/styles.css
@@ -7,8 +7,8 @@ body {
 
 /* Hero */
 
-.hero {
-    background-image: url(images/Paella\ Banner\ FULLHD.jpg);
+header {
+    background-image: url(images/Paella\ Banner\ 90%.jpg);
     height: 600px;
     width: 100%;
     background-size: cover;
@@ -18,6 +18,7 @@ body {
     grid-template: repeat(12, 1fr) / repeat(6, 1fr);
     justify-items: center;
     align-items: center;
+    opacity: 0.9;
 }
 
 .title {
@@ -37,7 +38,7 @@ h1 {
     margin: 0;
 }
 
-.hero img {
+header img {
     max-height: 100%;
     width: auto;
     grid-area: 1 / 3 / span 6 / span 2;
@@ -51,6 +52,7 @@ h1 {
     grid-template: 1fr / 1fr 1fr;
     grid-column-gap: 10px;
     margin: 10px 0;
+    opacity: 0.9;
 }
 
 .contacto-container {
@@ -84,7 +86,8 @@ h1 {
     align-items: center;
     grid-row-gap: 30px;
     grid-column-gap: 30px;
-    background-color: hsl(222, 75%, 50%, 0.05);
+    background-color: hsl(222, 30%, 50%, 0.02);
+    opacity: 0.9;
 }
 
 .arroces h2 {
