--- a/resources/styles.css
+++ b/resources/styles.css
@@ -8,7 +8,7 @@ body {
 /* Hero */
 
 header {
-    background-image: url(images/Paella\ Banner\ 90%.jpg);
+    background-image: url(./images/Paella\ Banner\ 90%.jpg);
     height: 600px;
     width: 100%;
     background-size: cover;
